src/makeint.h

/* This must happen before #include <signal.h> so
   that the declaration therein is changed.  */
# define signal bsdsignal
void exit (int) NORETURN;
#define _(msgid)            gettext (msgid)
# define kill(_pid,_sig) w32_kill((_pid),(_sig))
struct file;
/* Specify the location of elements read from makefiles.  */
typedef struct
  {
    const char *filenm;
    unsigned long lineno;
    unsigned long offset;
  } floc;
void error (const floc *flocp, size_t length, const char *fmt, ...)
            ATTRIBUTE ((__format__ (__printf__, 3, 4)));
void temp_stdin_unlink (void);
void die (int) NORETURN;
void pfatal_with_name (const char *) NORETURN;
void perror_with_name (const char *, const char *);
pid_t make_pid (void);
int ar_name (const char *);
time_t ar_member_date (const char *);
int unload_file (const char *name);
extern unsigned short stopchar_map[];
extern char cmd_prefix;
# define exit(foo) vms_exit(foo)
int remote_kill (pid_t id, int sig);
extern volatile sig_atomic_t handling_fatal_signal;